# coding-challenges

./: .gitignore  107_easy_alldecodings.py  109_easy_digitscheck.py  111_easy_stardelete.py  113_stringtype.py  116_easy_permutation.py  117_easy_hexdump.py  119_changecalc.py  122_easy_digitalroot.py  122_easy_orderedvowels.py  70_easy_commonwords.py  76_easy_titlecase.py  86_easy_runlength.py  87_easy_rect-intersection.py  99_easy_alphabetical-order.py  README.md  loremipsum.txt  pyproject.toml  rect_intersection.py  requirements.txt  runlength.py  stringtype.py  stringtype2.py
aoc2021/: README.md  day1.cpp  day2.cpp  day3.cpp
ctci/: 1.1-unique_chars.py  1.1.py  1.2-check_permutation.py  1.3-urlify.py  1.4-palindrome_permutation.py  1.5-one_away.py  2.1-remove_dupes.py  2.2-return_kth_to_last.py
dailyprogrammer/: 104_easy_powerplant.py  110_easy_keyboardshift.py  113_easy_stringtype2.py  114_easy_wordladder.py  115_easy_guessnumber.py  119_int_shortestpath.py  366_word_funnel_1.py  59_easy_embeddedstrings.py  70_easy_commonwords.py  README.md
leetcode/: 01_twosum.py  03_longest_substring.py  09_palindrone_number.py  1002_find_common_characters.py  1108_defanging_ip.py  11_container_with_most_water.py  125_valid_palindrome.py  136_single_number.py  15_3sum.py  169_majority_element.py  1_twosum.py  20_valid_parentheses.py  217_contains_duplicate.py  238_product_of_array_except_self.py  242_valid_anagram.py  271_encode_decode_strings.py  347_top_k_frequent_elements.py  476_number_complement.py  49_group_anagrams.py  500_keyboard_row.py  657_robot_return_to_origin.py  (+15 more)
(+2 files in other folders)
