[tool.poetry]
name = "coding-challenges"
version = "0.1.0"
description = ""
authors = ["edmondburnett <_@edmondburnett.com>"]

[tool.poetry.dependencies]
python = "^3.9"
idna = "^3.1"
chardet = "^4.0.0"
certifi = "^2022.12.7"
ipython = "^7.23.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
